--- a/rootdir/etc/init/hw/init.mt6765.rc
+++ b/rootdir/etc/init/hw/init.mt6765.rc
@@ -1,15 +1,12 @@
 # MTK platform .rc configure
 
-import ${ro.vendor.rc}init.connectivity.rc
+import /vendor/etc/init/hw/init.connectivity.rc
 import /vendor/etc/init/hw/init.mt6765.usb.rc
 import /vendor/etc/init/hw/init.project.rc
-import /FWUpgradeInit.rc
-import /vendor/etc/init/hw/init.aee.rc
-import /system/etc/init/hw/init.aee.rc
 import ${ro.vendor.rc}init.volte.rc
 import ${ro.vendor.rc}init.mal.rc
-import ${ro.vendor.rc}init.sensor_1_0.rc
-import ${ro.vendor.rc}init.ago.rc
+import $/vendor/etc/init/hw/init.sensor_1_0.rc
+import /vendor/etc/init/hw/init.ago.rc
 
 # init.modem.rc must be the LAST rc file because vold.post_fs_data_done is set in it
 import ${ro.vendor.rc}init.modem.rc
@@ -93,7 +90,16 @@ on late-init
 
 # mount different fs start
 
+service charger /system/bin/offlinecharging
+    class charger
+    critical
+    group system graphics
+    seclabel u:r:healthd:s0
+
 on charger
+    write /sys/class/leds/lcd-backlight/brightness "1000"
+    write /sys/class/leds/lcd-backlight/trigger "backlight"
+
     write /proc/hps/enabled 0
     write /sys/devices/system/cpu/cpu0/online 1
     write /sys/devices/system/cpu/cpu1/online 1
