--- a/rootdir/etc/init/hw/init.mt8768.rc
+++ b/rootdir/etc/init/hw/init.mt8768.rc
@@ -1,15 +1,12 @@
 # MTK platform .rc configure
 
-import ${ro.vendor.rc}init.connectivity.rc
+import /vendor/etc/init/hw/init.connectivity.rc
 import /vendor/etc/init/hw/init.mt6765.usb.rc
 import /vendor/etc/init/hw/init.project.rc
-import /FWUpgradeInit.rc
-import /vendor/etc/init/hw/init.aee.rc
-import /system/etc/init/hw/init.aee.rc
 import ${ro.vendor.rc}init.volte.rc
 import ${ro.vendor.rc}init.mal.rc
-import ${ro.vendor.rc}init.sensor_1_0.rc
-import ${ro.vendor.rc}init.ago.rc
+import $/vendor/etc/init/hw/init.sensor_1_0.rc
+import /vendor/etc/init/hw/init.ago.rc
 
 # init.modem.rc must be the LAST rc file because vold.post_fs_data_done is set in it
 import ${ro.vendor.rc}init.modem.rc
